# justin.directory

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  pubspec.yaml  script.js  style.css
api/: Cargo.toml
api/api_auth_macro/: Cargo.toml
api/api_auth_macro/src/: lib.rs
api/src/: auth.rs  education.rs  main.rs
contact/: index.html  style.css
lib/: auth.dart  main.dart
portfolio-api/: Cargo.toml  build.rs
portfolio-api/proto/: portfolio.proto
portfolio-api/src/: auth.rs  education.rs  main.rs  portfolio.rs
src/: App.vue
src/assets/: main.css
website/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
website/assets/: base.css
website/components/: Education.vue  Loading.vue  NavBar.vue
website/composables/: auth.ts
website/pages/: index.vue
website/pages/auth/: index.vue
website/src/: App.vue
website/src/assets/: base.css  main.css
website/src/components/: EducationHistory.vue
website/src/router/: index.ts
website/src/views/: PortfolioView.vue
