[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
http = {version = "1.1.0"}
jsonwebtoken = "9.3.0"
prost = "0.13.3"
reqwest = "0.12.9"
serde = {version="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["rt-multi-thread"]}
tonic = {version = "0.12.3", features = ["tls"]}
tonic-async-interceptor = "0.12.0"
tower = "0.5.1"

[build-dependencies]
tonic-build = "*"
