[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.38"
http = {version = "1.1.0"}
jsonwebtoken = "9.3.0"
reqwest = "0.12.9"
serde = {version="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["rt-multi-thread"]}
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
